<GridLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/monthlyPayment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mortgagecalculator.MainActivity" >

    <TextView
        android:id="@+id/purchasePriceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/purchasePrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/downPaymentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:text="@string/downPayment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/interestRateView"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:text="@string/interestRate"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/periodView"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/period"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/periodAmountSeekBar"
        android:layout_width="163dp"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="3"
        android:max="30"
        android:progress="15" />

    <TextView
        android:id="@+id/purchasePriceAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:text="  "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/purchasePriceEditAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_weight="1"
        android:digits="0123456789"
        android:inputType="number"
        android:visibility="visible" />

    <TextView
        android:id="@+id/downPaymentAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_blue_bright"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/downPaymentEditAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:digits="0123456789"
        android:inputType="number"
        android:textColorHighlight="@android:color/holo_blue_bright"
        android:visibility="visible" />

    <EditText
        android:id="@+id/interestRateEditAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:digits="0123456789."
        android:inputType="number|numberDecimal"
        android:textColorHighlight="@android:color/holo_blue_bright"
        android:visibility="visible" />

    <TextView
        android:id="@+id/interestRateAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/monthlyPaymentView"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/monthlyPayment"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/year10MonthlyView"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="7"
        android:text="@string/year10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/year20MonthlyView"
        android:layout_column="1"
        android:layout_gravity="left|center"
        android:layout_row="7"
        android:text="@string/year20"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/year10MonthlyAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="8"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/year20MonthlyAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="8"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/year30MonthlyView"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="9"
        android:text="@string/year30"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customMonthlyView"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="9"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/year30MonthlyAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="top|center"
        android:layout_row="10"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customMonthlyAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="top|left"
        android:layout_row="10"
        android:background="@android:color/holo_orange_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="6"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</GridLayout>